# nba-clv-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nba_clv_dashboard/: __init__.py  app.py  demo_metrics.py
nba_clv_dashboard/static/: index.html
tests/: test_api.py
