[project]
name = "nba-clv-dashboard"
version = "0.1.0"
description = "FastAPI + static dashboard: calibration, rolling accuracy, CLV-style closing-line simulation (demo data)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=7.0", "ruff>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nba_clv_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py310"
